WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187538
[WinCairo] MIME type registry doesn't explicitly recognize *.css
https://bugs.webkit.org/show_bug.cgi?id=187538
Summary
[WinCairo] MIME type registry doesn't explicitly recognize *.css
Ross Kirsling
Reported
2018-07-10 16:08:41 PDT
[WinCairo] MIME type registry doesn't explicitly recognize *.css
Attachments
Patch
(1.80 KB, patch)
2018-07-10 16:13 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2018-07-10 16:13:28 PDT
Created
attachment 344730
[details]
Patch
Ross Kirsling
Comment 2
2018-07-10 16:16:09 PDT
As indicated in the ChangeLog, this issue is causing (more or less) all layout tests to fail on our bots with the message:
> CONSOLE MESSAGE: Did not parse stylesheet at 'tests.css' because non CSS MIME types are not allowed in strict mode.
https://build.webkit.org/results/WinCairo%2064-bit%20WKL%20Release%20(Tests)/r233680%20(549)/results.html
Yusuke Suzuki
Comment 3
2018-07-10 16:57:56 PDT
Comment on
attachment 344730
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-07-10 17:27:25 PDT
Comment on
attachment 344730
[details]
Patch Clearing flags on attachment: 344730 Committed
r233715
: <
https://trac.webkit.org/changeset/233715
>
WebKit Commit Bot
Comment 5
2018-07-10 17:27:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-07-10 17:31:27 PDT
<
rdar://problem/42049036
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug