[WinCairo] MIME type registry doesn't explicitly recognize *.css https://bugs.webkit.org/show_bug.cgi?id=187538

Reviewed by Yusuke Suzuki.

MIMETypeRegistryWin doesn't explicitly recognize *.css; it instead falls back to the registry key "Content Type"
under HKEY_CLASSES_ROOT\.css. This key doesn't exist on Windows Server unless an application actually registers
it -- as a result, WinCairo bots are currently viewing it as an unrecognized filetype!

* platform/win/MIMETypeRegistryWin.cpp:
(WebCore::MIMETypeRegistry::getMIMETypeForExtension):
Add *.css to the list of recognized filetypes.


Canonical link: https://commits.webkit.org/202769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233715 268f45cc-cd09-0410-ab3c-d52691b4dbfc